ch_19_adv_features : rev 10 - skip Macro hell lol

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_19_advanced_features.ipynb
@@ -3892,6 +3892,251 @@
     "other resources, such as “The Little Book of Rust Macros” started by Daniel Keep  \n",
     "and continued by Lukas Wirth."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Procedural Macros for Generating Code from Attributes\n",
+    "\n",
+    "The second form of macros is the procedural macro, which acts more like a  \n",
+    "function (and is a type of procedure). Procedural macros accept some code as an  \n",
+    "input, operate on that code, and produce some code as an output rather than  \n",
+    "matching against patterns and replacing the code with other code as declarative  \n",
+    "macros do. The three kinds of procedural macros are : \n",
+    "\n",
+    "- custom derive,  \n",
+    "- attribute-like,  \n",
+    "- and function-like,  \n",
+    "- and all work in a similar fashion.\n",
+    "\n",
+    "When creating procedural macros, the definitions must reside in their own crate  \n",
+    "with a special crate type. This is for complex technical reasons that we hope  \n",
+    "to eliminate in the future. In Listing 19-29, we show how to define a  \n",
+    "procedural macro, where some_attribute is a placeholder for using a specific  \n",
+    "macro variety.\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "cannot find attribute `some_attribute` in this scope",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m cannot find attribute `some_attribute` in this scope",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_2:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m3 │\u001b[0m \u001b[38;5;249m#\u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;54ms\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54mm\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54m_\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54mi\u001b[0m\u001b[38;5;54mb\u001b[0m\u001b[38;5;54mu\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;249m]\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m   \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m          \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m error: cannot find attribute `some_attribute` in this scope",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "cannot find type `TokenStream` in this scope",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0412] Error:\u001b[0m cannot find type `TokenStream` in this scope",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_2:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m4 │\u001b[0m \u001b[38;5;249mp\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mb\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mf\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mT\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54mk\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54mS\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mm\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m-\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mT\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mk\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mS\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m                          \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m                               \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m not found in this scope",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "cannot find type `TokenStream` in this scope",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0412] Error:\u001b[0m cannot find type `TokenStream` in this scope",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_2:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m4 │\u001b[0m \u001b[38;5;249mp\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mb\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mf\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m_\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mp\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mT\u001b[0m\u001b[38;5;249mo\u001b[0m\u001b[38;5;249mk\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mS\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m-\u001b[0m\u001b[38;5;249m>\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54mT\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54mk\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54mS\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mm\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m{\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m                                           \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m                                                \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m not found in this scope",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "use proc_macro;\n",
+    "\n",
+    "#[some_attribute]\n",
+    "pub fn some_name( input: TokenStream ) -> TokenStream {\n",
+    "    // --snip--\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-29: An example of defining a procedural macro\n",
+    "\n",
+    "The function that defines a procedural macro takes a TokenStream as an input  \n",
+    "and produces a TokenStream as an output. The TokenStream type is defined by  \n",
+    "the proc_macro crate that is included with Rust and represents a sequence of  \n",
+    "tokens. This is the core of the macro:  \n",
+    "\n",
+    "- the source code that the macro is operating on makes up the input TokenStream, \n",
+    "- and the code the macro produces is the output TokenStream.  \n",
+    "\n",
+    "The function also has an attribute attached to it that specifies which kind of  \n",
+    "procedural macro we’re creating. We can have multiple kinds of procedural  \n",
+    "macros in the same crate.\n",
+    "\n",
+    "Let’s look at the different kinds of procedural macros. We’ll start with a  \n",
+    "custom derive macro and then explain the small dissimilarities that make the  \n",
+    "other forms different."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to Write a Custom `derive` Macro\n",
+    "\n",
+    "Let’s create a crate named hello_macro that defines a trait named HelloMacro  \n",
+    "with one associated function named hello_macro. Rather than making our users  \n",
+    "implement the HelloMacro trait for each of their types, we’ll provide a  \n",
+    "procedural macro so users can annotate their type with #[derive(HelloMacro)]  \n",
+    "to get a default implementation of the hello_macro function.  \n",
+    "\n",
+    "The default implementation will print :  \n",
+    "\n",
+    "- Hello, Macro! My name is TypeName!  \n",
+    "- where TypeName is the name of the type on which this trait has been defined.  \n",
+    "\n",
+    "In other words, we’ll write a crate that enables another programmer to write  \n",
+    "code like Listing 19-30 using our crate.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "unresolved import `hello_macro_derive`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0432] Error:\u001b[0m unresolved import `hello_macro_derive`"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "cannot determine resolution for the derive macro `HelloMacro`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mError:\u001b[0m cannot determine resolution for the derive macro `HelloMacro`",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_3:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m4 │\u001b[0m \u001b[38;5;249m#\u001b[0m\u001b[38;5;249m[\u001b[0m\u001b[38;5;249md\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mr\u001b[0m\u001b[38;5;249mi\u001b[0m\u001b[38;5;249mv\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;54mH\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54ml\u001b[0m\u001b[38;5;54ml\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;54mM\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mc\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54mo\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m]\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m          \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m               \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m error: cannot determine resolution for the derive macro `HelloMacro`",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Error",
+     "evalue": "no function or associated item named `hello_macro` found for struct `Pancakes` in the current scope",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0599] Error:\u001b[0m no function or associated item named `hello_macro` found for struct `Pancakes` in the current scope",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_3:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m5 │\u001b[0m \u001b[38;5;54ms\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54mr\u001b[0m\u001b[38;5;54mu\u001b[0m\u001b[38;5;54mc\u001b[0m\u001b[38;5;54mt\u001b[0m\u001b[38;5;54m \u001b[0m\u001b[38;5;54mP\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mn\u001b[0m\u001b[38;5;54mc\u001b[0m\u001b[38;5;54ma\u001b[0m\u001b[38;5;54mk\u001b[0m\u001b[38;5;54me\u001b[0m\u001b[38;5;54ms\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m \u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m┬\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m        \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m function or associated item `hello_macro` not found for this struct",
+      " \u001b[38;5;246m  ·\u001b[0m ",
+      " \u001b[38;5;246m8 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mP\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mn\u001b[0m\u001b[38;5;249mc\u001b[0m\u001b[38;5;249ma\u001b[0m\u001b[38;5;249mk\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;249m:\u001b[0m\u001b[38;5;100mh\u001b[0m\u001b[38;5;100me\u001b[0m\u001b[38;5;100ml\u001b[0m\u001b[38;5;100ml\u001b[0m\u001b[38;5;100mo\u001b[0m\u001b[38;5;100m_\u001b[0m\u001b[38;5;100mm\u001b[0m\u001b[38;5;100ma\u001b[0m\u001b[38;5;100mc\u001b[0m\u001b[38;5;100mr\u001b[0m\u001b[38;5;100mo\u001b[0m\u001b[38;5;249m(\u001b[0m\u001b[38;5;249m)\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m               \u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m┬\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m                    \u001b[38;5;100m╰\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m\u001b[38;5;100m─\u001b[0m function or associated item not found in `Pancakes`",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "use hello_macro::HelloMacro;\n",
+    "use hello_macro_derive::HelloMacro;\n",
+    "\n",
+    "#[derive(HelloMacro)]\n",
+    "struct Pancakes;\n",
+    "\n",
+    "{\n",
+    "    Pancakes::hello_macro();\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 19-30: The code a user of our crate will be able to write when using  \n",
+    "our procedural macro\n",
+    "\n",
+    "This code will print Hello, Macro! My name is Pancakes! when we’re done. The  \n",
+    "first step is to make a new library crate, like this:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo new hello_macro --lib\n",
+    "```\n",
+    "\n",
+    "Next, we’ll define the HelloMacro trait and its associated function:\n",
+    "\n",
+    "> Filename: src/lib.rs // actually in hello_macro/src/lib.rs\n",
+    "\n",
+    "```rust\n",
+    "pub trait HelloMacro {\n",
+    "    fn hello_macro();\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "We have a trait and its function. At this point, our crate user could implement  \n",
+    "the trait to achieve the desired functionality, like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "unresolved import `hello_macro`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0432] Error:\u001b[0m unresolved import `hello_macro`"
+     ]
+    }
+   ],
+   "source": [
+    "use hello_macro::HelloMacro;"
+   ]
   }
  ],
  "metadata": {
