--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -96,11 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::net::TcpListener;\n",
@@ -232,11 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -264,6 +256,274 @@
     "    }\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-2: Reading from the TcpStream and printing the data\n",
+    "\n",
+    "We bring std::io::prelude and std::io::BufReader into scope to get access to  \n",
+    "traits and types that let us read from and write to the stream. In the for loop  \n",
+    "in the main function, instead of printing a message that says we made a  \n",
+    "connection, we now call the new handle_connection function and pass the stream  \n",
+    "to it.\n",
+    "\n",
+    "In the handle_connection function, we create a new BufReader instance that  \n",
+    "wraps a mutable reference to the stream. BufReader adds buffering by managing  \n",
+    "calls to the std::io::Read trait methods for us.\n",
+    "\n",
+    "We create a variable named http_request to collect the lines of the request the  \n",
+    "browser sends to our server. We indicate that we want to collect these lines in  \n",
+    "a vector by adding the Vec<_> type annotation.\n",
+    "\n",
+    "BufReader implements the std::io::BufRead trait, which provides the lines  \n",
+    "method. The lines method returns an iterator of Result<String, std::io::Error>  \n",
+    "by splitting the stream of data whenever it sees a newline byte. To get each  \n",
+    "String, we map and unwrap each Result. The Result might be an error if the data  \n",
+    "isn’t valid UTF-8 or if there was a problem reading from the stream. Again, a  \n",
+    "production program should handle these errors more gracefully, but we’re  \n",
+    "choosing to stop the program in the error case for simplicity.\n",
+    "\n",
+    "The browser signals the end of an HTTP request by sending two newline  \n",
+    "characters in a row, so to get one request from the stream, we take lines until  \n",
+    "we get a line that is the empty string. Once we’ve collected the lines into the  \n",
+    "vector, we’re printing them out using pretty debug formatting so we can take a  \n",
+    "look at the instructions the web browser is sending to our server."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s try this code! Start the program and make a request in a web browser again. Note that we’ll still get an error page in the browser, but our program’s output in the terminal will now look similar to this:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling hello v0.1.0 (file:///projects/hello)\n",
+    "    Finished dev [unoptimized + debuginfo] target(s) in 0.42s\n",
+    "     Running `target/debug/hello`\n",
+    "Request: [\n",
+    "    \"GET / HTTP/1.1\",\n",
+    "    \"Host: 127.0.0.1:7878\",\n",
+    "    \"User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:99.0) Gecko/20100101 Firefox/99.0\",\n",
+    "    \"Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8\",\n",
+    "    \"Accept-Language: en-US,en;q=0.5\",\n",
+    "    \"Accept-Encoding: gzip, deflate, br\",\n",
+    "    \"DNT: 1\",\n",
+    "    \"Connection: keep-alive\",\n",
+    "    \"Upgrade-Insecure-Requests: 1\",\n",
+    "    \"Sec-Fetch-Dest: document\",\n",
+    "    \"Sec-Fetch-Mode: navigate\",\n",
+    "    \"Sec-Fetch-Site: none\",\n",
+    "    \"Sec-Fetch-User: ?1\",\n",
+    "    \"Cache-Control: max-age=0\",\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "Depending on your browser, you might get slightly different output. Now that  \n",
+    "we’re printing the request data, we can see why we get multiple connections  \n",
+    "from one browser request by looking at the path after GET in the first line of  \n",
+    "the request. If the repeated connections are all requesting /, we know the  \n",
+    "browser is trying to fetch / repeatedly because it’s not getting a response  \n",
+    "from our program.\n",
+    "\n",
+    "Let’s break down this request data to understand what the browser is asking of  \n",
+    "our program."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A Closer Look at an HTTP Request\n",
+    "\n",
+    "HTTP is a text-based protocol, and a request takes this format:\n",
+    "\n",
+    "```sh\n",
+    "Method Request-URI HTTP-Version CRLF\n",
+    "headers CRLF\n",
+    "message-body\n",
+    "```\n",
+    "\n",
+    "The first line is the request line that holds information about what the client  \n",
+    "is requesting. The first part of the request line indicates the method being  \n",
+    "used, such as GET or POST, which describes how the client is making this  \n",
+    "request. Our client used a GET request, which means it is asking for  \n",
+    "information.\n",
+    "\n",
+    "The next part of the request line is /, which indicates the Uniform Resource  \n",
+    "Identifier (URI) the client is requesting: a URI is almost, but not quite, the  \n",
+    "same as a Uniform Resource Locator (URL). The difference between URIs and URLs  \n",
+    "isn’t important for our purposes in this chapter, but the HTTP spec uses the  \n",
+    "term URI, so we can just mentally substitute URL for URI here.\n",
+    "\n",
+    "The last part is the HTTP version the client uses, and then the request line  \n",
+    "ends in a CRLF sequence. (CRLF stands for carriage return and line feed, which  \n",
+    "are terms from the typewriter days!) The CRLF sequence can also be written as  \n",
+    "\\r\\n, where \\r is a carriage return and \\n is a line feed. The CRLF sequence  \n",
+    "separates the request line from the rest of the request data. Note that when  \n",
+    "the CRLF is printed, we see a new line start rather than \\r\\n.\n",
+    "\n",
+    "Looking at the request line data we received from running our program so far,  \n",
+    "we see that :  \n",
+    "\n",
+    "- `GET` is the `method`,  \n",
+    "- `/` is the `request URI`,  \n",
+    "- and `HTTP/1.1` is the `version`.\n",
+    "\n",
+    "After the request line, the remaining lines starting from Host:\n",
+    "\n",
+    "- onward are headers.  \n",
+    "- GET requests have no body.\n",
+    "\n",
+    "Try making a request from a different browser or asking for a different  \n",
+    "address, such as `127.0.0.1:7878/test`, to see how the request data changes.\n",
+    "\n",
+    "Now that we know what the browser is asking for, let’s send back some data!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Writing a Response\n",
+    "\n",
+    "We’re going to implement sending data in response to a client request.  \n",
+    "Responses have the following format:\n",
+    "\n",
+    "```sh\n",
+    "HTTP-Version Status-Code Reason-Phrase CRLF\n",
+    "headers CRLF\n",
+    "message-body\n",
+    "```\n",
+    "\n",
+    "The first line is :  \n",
+    "\n",
+    "- a status line that contains the HTTP version used in the response,  \n",
+    "- a numeric status code that summarizes the result of the request, and  \n",
+    "- a reason phrase that provides a text description of the status code.  \n",
+    "\n",
+    "After the CRLF sequence are any headers, another CRLF sequence, and the body of  \n",
+    "the response.\n",
+    "\n",
+    "Here is an example response that :  \n",
+    "\n",
+    "- uses HTTP version 1.1,  \n",
+    "- has a status code of 200,  \n",
+    "- an OK reason phrase,  \n",
+    "- no headers, and  \n",
+    "- no body:\n",
+    "\n",
+    "```sh\n",
+    "HTTP/1.1 200 OK\\r\\n\\r\\n\n",
+    "```\n",
+    "\n",
+    "- The status code `200` is the `standard success` response.  \n",
+    "- The text is a tiny successful `HTTP` response.  \n",
+    "\n",
+    "Let’s write this to the stream as our response to a successful request! From  \n",
+    "the handle_connection function, remove the println! that was printing the  \n",
+    "request data and replace it with the code in Listing 20-3.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    // - prelude::* brings in the IO prelude, which includes traits like Read  \n",
+    "    // and Write\n",
+    "    // - BufReader is a buffered reader type, which can read from a source and  \n",
+    "    // buffer the input\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream}, //  types for TCP network communication\n",
+    "}\n",
+    "\n",
+    "/// Takes a mutable TcpStream as a parameter\n",
+    "/// TcpStream represents a TCP connection to a remote end point\n",
+    "fn handle_connection_v2(mut stream: TcpStream) {\n",
+    "    // BufReader object is created from the TcpStream\n",
+    "    // This will allow reading from the stream in a buffered fashion for  \n",
+    "    // efficiency and convenience\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "    // reads HTTP request lines from the buffered reader\n",
+    "    // Vec<_> is a placeholder type, which tells the compiler to infer the\n",
+    "    // type of the Vec\n",
+    "    let http_request: Vec<_> = buf_reader\n",
+    "        // lines() generates an iterator over the lines in the stream\n",
+    "        .lines()\n",
+    "        // map() unwraps each line (panicking if there's an error)\n",
+    "        .map(|result| result.unwrap())\n",
+    "        // take_while() stops the iteration when it encounters an empty line  \n",
+    "        // (which marks the end of the HTTP headers)\n",
+    "        .take_while(|line| !line.is_empty())\n",
+    "        // collect() collects the resulting lines into a Vec\n",
+    "        .collect();\n",
+    "\n",
+    "    println!(\"Request: {:#?}\", http_request);\n",
+    "    // simple HTTP response string is created \n",
+    "    // This is a minimal \"200 OK\" response, meaning that the request was  \n",
+    "    // successful\n",
+    "    let response = \"HTTP/1.1 200 OK\\r\\n\\r\\n\";\n",
+    "\n",
+    "    // - writes the response string back to the client\n",
+    "    // - as_bytes() converts the string into bytes that can be written to the  \n",
+    "    // stream\n",
+    "    // - unwrap() panics if there's an error\n",
+    "    stream.write(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    // creates a TCP listener that listens for incoming connections on the  \n",
+    "    // local IP address 127.0.0.1 and port 7878\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    // Iterates over the incoming connections to the TCP listener\n",
+    "    // Each incoming connection is a TcpStream that can be read from and  \n",
+    "    // written to\n",
+    "    for stream in listener.incoming() {\n",
+    "        // unwrap() is used to panic if there's an error accepting a connection\n",
+    "        let stream = stream.unwrap();\n",
+    "        // handle each incoming connection\n",
+    "        handle_connection_v2(stream);\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-3: Writing a tiny successful HTTP response to the stream\n",
+    "\n",
+    "- The first new line defines the response variable that holds the success  \n",
+    "message’s data. \n",
+    "- Then we call `as_bytes` on our response to convert the string data to bytes.  \n",
+    "- The `write_all` method on stream takes a `&[u8]` and sends those bytes  \n",
+    "directly down the connection.  \n",
+    "- Because the `write_all` operation could fail, we use `unwrap` on any  \n",
+    "`error result` as before.  \n",
+    "- Again, in a real application you would add `error handling` here.\n",
+    "\n",
+    "With these changes, let’s run our code and make a request. We’re no longer  \n",
+    "printing any data to the terminal, so we won’t see any output other than the  \n",
+    "output from Cargo. When you load `127.0.0.1:7878` in a web browser :  \n",
+    "\n",
+    "- you should get a blank page  \n",
+    "- instead of an error.  \n",
+    "\n",
+    "You’ve just hand-coded receiving an HTTP request and sending a response!"
+   ]
   }
  ],
  "metadata": {
@@ -276,7 +536,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
