ch_20_final_server : rev 3 NO BEES html

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -96,7 +96,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::net::TcpListener;\n",
@@ -228,7 +232,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -436,7 +444,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -524,6 +536,126 @@
     "\n",
     "You’ve just hand-coded receiving an HTTP request and sending a response!"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s implement the functionality for returning more than a blank page. Create  \n",
+    "the new file hello.html in the root of your project directory, not in the src  \n",
+    "directory. You can input any HTML you want; Listing 20-4 shows one possibility.\n",
+    "\n",
+    "> Filename: hello.html\n",
+    "\n",
+    "```html\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "  <head>\n",
+    "    <meta charset=\"utf-8\">\n",
+    "    <title>Hello!</title>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <h1>Hello!</h1>\n",
+    "    <p>Hi from Rust</p>\n",
+    "  </body>\n",
+    "</html>\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 20-4: A sample HTML file to return in a response\n",
+    "\n",
+    "This is a minimal HTML5 document with a heading and some text. To return this  \n",
+    "from the server when a request is received, we’ll modify handle_connection as  \n",
+    "shown in Listing 20-5 to read the HTML file, add it to the response as a body,  \n",
+    "and send it.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_html(mut stream: TcpStream) {\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "    let http_request: Vec<_> = buf_reader\n",
+    "        .lines()\n",
+    "        .map(|result| result.unwrap())\n",
+    "        .take_while(|line| !line.is_empty())\n",
+    "        .collect();\n",
+    "\n",
+    "    let status_line = \"HTTP/1.1 200 OK\";\n",
+    "    // We created an HTML file called hello.html at root dir and are loading it\n",
+    "    let contents = fs::read_to_string(\"hello.html\").unwrap();\n",
+    "    let length = contents.len();\n",
+    "\n",
+    "    let response = format!(\n",
+    "        \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "    );\n",
+    "\n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    for stream in listener.incoming() {\n",
+    "        let stream = stream.unwrap();\n",
+    "        handle_connection_html(stream);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html lang=\"en\">\n",
+      "    <meta charset=\"utf-8\">\n",
+      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
+      "    <title>Hello!</title>\n",
+      "  </head>\n",
+      "  <body>\n",
+      "    <h1>Hello!</h1>\n",
+      "    <p>Hi from Rust</p>\n",
+      "  </body>\n",
+      "</html>\n",
+      "  <head>\n"
+     ]
+    }
+   ],
+   "source": [
+    "let contents = fs::read_to_string(\"hello.html\").unwrap();\n",
+    "println!(\"{}\", contents);"
+   ]
   }
  ],
  "metadata": {
@@ -536,7 +668,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
