ch_20_final_server : rev 4 404 error response

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_20_final_server.ipynb
@@ -96,11 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::net::TcpListener;\n",
@@ -232,11 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -444,11 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -580,12 +568,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "use std::{\n",
@@ -625,36 +609,334 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "rust"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<!DOCTYPE html>\n",
-      "<html lang=\"en\">\n",
-      "    <meta charset=\"utf-8\">\n",
-      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\">\n",
-      "    <title>Hello!</title>\n",
-      "  </head>\n",
-      "  <body>\n",
-      "    <h1>Hello!</h1>\n",
-      "    <p>Hi from Rust</p>\n",
-      "  </body>\n",
-      "</html>\n",
-      "  <head>\n"
-     ]
-    }
-   ],
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "let contents = fs::read_to_string(\"hello.html\").unwrap();\n",
-    "println!(\"{}\", contents);"
+    "> Listing 20-5: Sending the contents of hello.html as the body of the response\n",
+    "\n",
+    "We’ve added fs to the use statement to bring the standard library’s filesystem  \n",
+    "module into scope. The code for reading the contents of a file to a string  \n",
+    "should look familiar; we used it in Chapter 12 when we read the contents of a  \n",
+    "file for our I/O project in Listing 12-4.\n",
+    "\n",
+    "Next, we use format! to add the file’s contents as the body of the success  \n",
+    "response. To ensure a valid HTTP response, we add the Content-Length header  \n",
+    "which is set to the size of our response body, in this case the size of \n",
+    "`hello.html`.\n",
+    "\n",
+    "Run this code with `cargo run` and load `127.0.0.1:7878` in your browser; you  \n",
+    "should see your HTML rendered!\n",
+    "\n",
+    "Currently, we’re ignoring the request data in `http_request` and just sending  \n",
+    "back the contents of the HTML file unconditionally. That means if you try  \n",
+    "requesting `127.0.0.1:7878/something-else` in your browser, you’ll still get  \n",
+    "back this same HTML response. At the moment, our server is very limited and  \n",
+    "does not do what most web servers do. We want to customize our responses  \n",
+    "depending on the request and only send back the HTML file for a well-formed  \n",
+    "request to /."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validating the Request and Selectively Responding\n",
+    "\n",
+    "Right now, our web server will return the HTML in the file no matter what the  \n",
+    "client requested. Let’s add functionality to check that the browser is  \n",
+    "requesting / before returning the HTML file and return an error if the browser  \n",
+    "requests anything else. For this we need to modify handle_connection, as shown  \n",
+    "in Listing 20-6. This new code checks the content of the request received  \n",
+    "against what we know a request for / looks like and adds if and else blocks to  \n",
+    "treat requests differently.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_req(mut stream: TcpStream){\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "\n",
+    "    // We only care about the first line of the request\n",
+    "    // - Calling next to get the first item from the iterator\n",
+    "    // - Unwrapping the result to get the line\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    if request_line == \"GET / HTTP/1.1\"{\n",
+    "        let status_line = \"HTTP/1.1 200 OK\";\n",
+    "        let contents = fs::read_to_string(\"hello.html\").unwrap();\n",
+    "        let length = contents.len();\n",
+    "\n",
+    "        let response = format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n(contents)\"\n",
+    "        );\n",
+    "\n",
+    "        stream.write_all(response.as_bytes()).unwrap();\n",
+    "    }\n",
+    "    else {\n",
+    "        // some other request\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    for stream in listener.incoming() {\n",
+    "        let stream = stream.unwrap();\n",
+    "        handle_connection_req(stream);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-6: Handling requests to / differently from other requests\n",
+    "\n",
+    "We’re only going to be looking at the first line of the HTTP request, so rather  \n",
+    "than reading the entire request into a vector :  \n",
+    "\n",
+    "- we’re calling `next` to get the first item from the iterator.  \n",
+    "- The first unwrap takes care of the Option and stops the program if the  \n",
+    "iterator has no items.  \n",
+    "- The second unwrap handles the Result and has the same effect as the unwrap  \n",
+    "that was in the map added in Listing 20-2.\n",
+    "\n",
+    "Next, we check the request_line to see if it equals the request line of a GET  \n",
+    "request to the / path. If it does, the if block returns the contents of our  \n",
+    "HTML file.\n",
+    "\n",
+    "If the request_line does not equal the GET request to the / path, it means  \n",
+    "we’ve received some other request. We’ll add code to the else block in a moment  \n",
+    "to respond to all other requests.\n",
+    "\n",
+    "Run this code now and request `127.0.0.1:7878`;  \n",
+    "\n",
+    "- you should get the HTML in `hello.html`.  \n",
+    "- If you make any other request, such as `127.0.0.1:7878/something-else`,  \n",
+    "- you’ll get a connection error like those you saw when running the code in  \n",
+    "Listing 20-1 and Listing 20-2.\n",
+    "\n",
+    "Now let’s add the code in Listing 20-7 to the else block to return a response  \n",
+    "with the status code 404, which signals that the content for the request was  \n",
+    "not found. We’ll also return some HTML for a page to render in the browser  \n",
+    "indicating the response to the end user.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_status(mut stream: TcpStream) {\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    if request_line == \"GET / HTTP/1.1\"{\n",
+    "        let status_line = \"HTTP/1.1 200 OK\";\n",
+    "        let contents = fs::read_to_string(\"hello.html\").unwrap();\n",
+    "        let length = contents.len();\n",
+    "\n",
+    "        let response = format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "\n",
+    "        stream.write_all(response.as_bytes()).unwrap();\n",
+    "    }\n",
+    "    else{\n",
+    "        let status_line = \"HTTP/1.1 404 NOT FOUND\";\n",
+    "        let contents = fs::read_to_string(\"404.html\").unwrap();\n",
+    "        let length = contents.len();\n",
+    "\n",
+    "        let response = format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "\n",
+    "        stream.write_all(response.as_bytes()).unwrap();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    for stream in listener.incoming() {\n",
+    "        let stream = stream.unwrap();\n",
+    "        handle_connection_status(stream);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-7: Responding with status code 404 and an error page if anything  \n",
+    "other than / was requested\n",
+    "\n",
+    "Here, our response has a status line with status code 404 and the reason phrase  \n",
+    "NOT FOUND. The body of the response will be the HTML in the file 404.html.  \n",
+    "You’ll need to create a 404.html file next to hello.html for the error page;  \n",
+    "again feel free to use any HTML you want or use the example HTML in  \n",
+    "Listing 20-8.\n",
+    "\n",
+    "> Filename: 404.html\n",
+    "\n",
+    "```html\n",
+    "<!DOCTYPE html>\n",
+    "<html lang=\"en\">\n",
+    "  <head>\n",
+    "    <meta charset=\"utf-8\">\n",
+    "    <title>Hello!</title>\n",
+    "  </head>\n",
+    "  <body>\n",
+    "    <h1>Oops!</h1>\n",
+    "    <p>Sorry, I don't know what you're asking for.</p>\n",
+    "  </body>\n",
+    "</html>\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-8: Sample content for the page to send back with any 404 response\n",
+    "\n",
+    "With these changes, run your server again. Requesting 127.0.0.1:7878 should  \n",
+    "return the contents of hello.html, and any other request,  \n",
+    "like 127.0.0.1:7878/foo, should return the error HTML from 404.html."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A Touch of Refactoring\n",
+    "\n",
+    "At the moment the if and else blocks have a lot of repetition: they’re both  \n",
+    "reading files and writing the contents of the files to the stream. The only  \n",
+    "differences are the status line and the filename. Let’s make the code more  \n",
+    "concise by pulling out those differences into separate if and else lines that  \n",
+    "will assign the values of the status line and the filename to variables; we can  \n",
+    "then use those variables unconditionally in the code to read the file and write  \n",
+    "the response. Listing 20-9 shows the resulting code after replacing the large  \n",
+    "if and else blocks.\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "use std::{\n",
+    "    fs,\n",
+    "    io::{prelude::*, BufReader},\n",
+    "    net::{TcpListener, TcpStream},\n",
+    "}\n",
+    "\n",
+    "fn handle_connection_status_v2(mut stream: TcpStream) {\n",
+    "    let buf_reader = BufReader::new(&mut stream);\n",
+    "\n",
+    "    let request_line = buf_reader.lines().next().unwrap().unwrap();\n",
+    "\n",
+    "    let (status_line, filename) = if request_line == \"GET / HTTP/1.1\" {\n",
+    "        (\"HTTP/1.1 200 OK\", \"hello.html\")\n",
+    "    }\n",
+    "    else {\n",
+    "        (\"HTTP/1.1 404 NOT FOUND\", \"404.html\")\n",
+    "    };\n",
+    "\n",
+    "    let contents = fs::read_to_string(filename).unwrap();\n",
+    "    let length = contents.len();\n",
+    "\n",
+    "    let response =\n",
+    "        format!(\n",
+    "            \"{status_line}\\r\\nContent-Length: {length}\\r\\n\\r\\n{contents}\"\n",
+    "        );\n",
+    "    \n",
+    "    stream.write_all(response.as_bytes()).unwrap();\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    let listener = TcpListener::bind(\"127.0.0.1:7878\").unwrap();\n",
+    "\n",
+    "    for stream in listener.incoming() {\n",
+    "        let stream = stream.unwrap();\n",
+    "        handle_connection_status_v2(stream);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 20-9: Refactoring the if and else blocks to contain only the code  \n",
+    "that differs between the two cases\n",
+    "\n",
+    "Now the if and else blocks only return the appropriate values for the status  \n",
+    "line and filename in a tuple; we then use destructuring to assign these two  \n",
+    "values to status_line and filename using a pattern in the let statement, as  \n",
+    "discussed in Chapter 18.\n",
+    "\n",
+    "The previously duplicated code is now outside the if and else blocks and uses  \n",
+    "the status_line and filename variables. This makes it easier to see the  \n",
+    "difference between the two cases, and it means we have only one place to update  \n",
+    "the code if we want to change how the file reading and response writing work.  \n",
+    "The behavior of the code in Listing 20-9 will be the same as that in  \n",
+    "Listing 20-8.\n",
+    "\n",
+    "Awesome! We now have a simple web server in approximately 40 lines of Rust code  \n",
+    "that :  \n",
+    "\n",
+    "- responds to one request with a `page of content` and  \n",
+    "- responds to all other requests with a `404 response`\n",
+    "\n",
+    "Currently, our server runs in a single thread, meaning it can only serve one  \n",
+    "request at a time. Let’s examine how that can be a problem by simulating some  \n",
+    "slow requests. Then we’ll fix it so our server can handle multiple requests at  \n",
+    "once."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Turning Our Single-Threaded Server into a Multithreaded Server\n",
+    "---"
    ]
   }
  ],
@@ -668,7 +950,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "Rust",
+   "name": "rust",
    "pygment_lexer": "rust",
    "version": ""
   },
